# memini

./: .appveyor.yml  .gitignore  .readthedocs.yml  .travis.yml  README.rst  pyproject.toml  requirements.txt  setup.py  tox_ci.ini  tox_win.ini
debian/: changelog  control  copyright  rules
docs/: conf.py  index.rst  user_doc.rst
docs/include/: user_guide.rst
docs/pics/: prez2.webm  workflow.odt
memini/core/: env.py  errors.py  parser.py  shared.py  template.py
memini/data/: metadata.toml
memini/data/template/: layout-cache  meta.xml  settings.xml  styles.xml
tests/: conftest.py  test_core_01_parser.py  test_core_02_database.py  test_core_02_terminal.py  test_core_03_database.py  test_core_03_sweepstakes.py  test_core_03_template.py  test_core_04_database.py  test_core_04_template.py  test_core_05_commands.py  test_core_05_dialog.py  test_core_05_document.py  test_core_05_template.py  test_core_05_terminal.py  test_core_06_commands.py  test_core_06_document.py  test_core_07_commands.py  test_core_07_main_script.py  test_core_08_main_script.py  test_core_db.py  test_core_document.py  test_core_parser.py  test_core_template.py  test_vocashaker.py
tests/data/: LO_modified_buggy.odt  LO_modified_fixed.odt  animal.txt  built_table1_contentxml.xml  defect_template.odt  fixed_content.xml  latin.txt  latin_add.txt  latin_add_parse_err.txt  latin_parse_err.txt  modified_template.odt  template1.odt  template3.odt  template4.odt  template_faked.odt  test.db  wrong_content.xml
toolbox/: prebuild
vocashaker/: __init__.py
vocashaker/core/: __init__.py  commands.py  database.py  db.py  document.py  env.py  errors.py  parser.py  prefs.py  settings.py  shared.py  sweepstakes.py  template.py  terminal.py
vocashaker/data/: content2.xml  metadata.toml
vocashaker/data/template/: content.xml  content3.xml  content4.xml  meta.xml  settings.xml  styles.xml
