[tool.poetry]
name = "vocashaker"
version = "0.1.0"
description = ""
authors = ["Nicolas Hainaux <nh.techn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
vocashaker = "vocashaker:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
