[tool.poetry]
name = "vocashaker"
version = "0.1.0"
description = ""
authors = ["Nicolas Hainaux <nh.techn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9.4"
relatorio = "^0.9.0"
intspan = "^1.6.1"
Click = "^7.1.2"
blessed = "^1.17.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-mock = "^1.10"
pyfakefs = "^3.6"
coverage = "^5.1"
coveralls = "^2.0.0"
flake8 = "^3.8.3"

[tool.poetry.scripts]
vocashaker = "vocashaker:run"
vosh = "vocashaker:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
