[tool.poetry]
name = "memini"
version = "1.0.0"
description = ""
authors = ["Nicolas Hainaux <nh.techn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9.4"
relatorio = "^0.9.0"
intspan = "^1.6.1"
Click = "^7.1.2"
blessed = "^1.17.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-mock = "^1.10"
pyfakefs = "^3.6"
coverage = "^5.1"
coveralls = "^2.0.0"
flake8 = "^3.8.3"
sphinx = "^3.1.2"
sphinx_rtd_theme = "^0.5.0"

[tool.poetry.scripts]
memini = "memini:run"

[build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = python3.6.12,python3.7.9,system

[testenv]
deps = pytest
       pytest-mock
       pyfakefs
commands = pytest -x -vv
"""
